--- a/machine_learning.org
+++ b/machine_learning.org
@@ -11,14 +11,17 @@
 **** log transformation
 *** TODO heteroscedasticity
 **** Box-cox transform
-*** Missing data
+*** TODO Missing data
     - median, mean
 **** Imputing
 ***** TODO MICE 
 ** Algorithms
-*** Linear regression
+*** Regression
+**** Linear regression
 **** Polynomial regression
-*** Logistic regression
+**** Logistic regression
+**** TODO ElasticNet
+**** TODO KernelRidge Regression
 *** k-nearest neighbors
     - Finds the k closest neighbors and classify according to the most common class. 
     - Elbow method to find k
@@ -61,26 +64,36 @@
 ***** PCA
 ***** TODO LDA
 ***** TODO SVD
-** Loss functions
+** TODO Loss functions
 *** LogLoss
     Quantifies accuracy by penalising false classifications. Must assign a probability to each class rather than simply yielding the most likely class.
-    [[./logloss.png]]
+    [[./images/logloss.png]]
     N is num of examples, M num of possible labels, y_{ij} is binary indicator of whether or not label j is correct classification for instance i, and p_{ij} is the model probability of assigning label j to instance i.
     For binary classification:
-    [[./logloss_binary.png]]
+    [[./images/logloss_binary.png]]
     Log Loss penalises classifiers that are confident about an incorrect classification. If the classifier assigns a very small prob to the correct class then the Log Loss will be very large. 
     It's better to be somewhat wrong than emphatically wrong.
-    [[./logloss_curve.png]]
-*** Multiclass Support Vector Machine (SVM) loss.
+    [[./images/logloss_curve.png]]
+*** Multiclass Support Vector Machine (SVM) loss. Hinge loss
     The correct class must have score higher than the incorrect classes by some fixed margin Delta. Delta can be safely set at 1.0 in all cases. the \lambda is the one to take into account
     - is more local objective. As long as the correct class is higher than the rest by the margin specified, the loss will be zero. [10,8,8] would be the same as [10, -100, -100] where the first one is the correct class.
 *** Softmax
 **** Hierarchical softmax
+*** TODO Huber loss
 ** Optimization
 *** Hyperparameter tuning
 **** Cross-validation
      - Grid search: select combination of hyperparameters to find which combination works better
      - Random search: instead of trying out all possible combinations, it evaluates a given num of random combinations by selecting a random value for each hyperparam at every iteration. Preferred if you have lots of hyperparams.
+     -  
+** Inspection
+*** Confusion matrix
+    compares predictions with the true label. To check false positives and false negatives
+*** Most important features.
+    - In randomforest there is a method.
+    - In regression, features with highest weights.
+    - Word2Vec: *Lime* 
+    - LIME: allows users to explain the decisions of any classifier *on one particular example* by perturbing the input and seeing how the prediction changes
 ** Comparison
 ** Resources
    - https://www.kaggle.com/ldfreeman3/a-data-science-framework-to-achieve-99-accuracy
