--- a/machine_learning.org
+++ b/machine_learning.org
@@ -17,6 +17,7 @@
 ***** TODO MICE 
 ** Validation/test sets and Cross Validation
    train on a test set, validate predictions in a validation set, and when u have ur model complete, then use test set. Usually select sets in random. But if there is a time feature, not random.
+   To calibrate validation set, check if is representative: train several models of different prediction capacity, test them on the validation and on the test, set. The results, set in a scatter plot, test vs val results, the dots should make a line. If not the validation is not close to the test set.
 *** Cross Validation
     To not overfit on validation set
     - GridSearch
@@ -45,11 +46,12 @@
      Bagging to create multiple decision trees, which reduces variance. Also chooses only subset of features. Later aggregates the predictions of individual trees.
      Doesnt overfit much. 
      Doesnt have statistic assumptions.
+     [[./trees.org]]
 ***** sklearn ensemble RandomForestClassifier or RandomForestRegressor
       - params: n_estimators, max_depth, bootstrap, n_jobs
-      - oob_score (out of bag score): calculate error on training set, but only include trees in the calculation of a row's error where that row was not included in training that tree. This allows us to see whether the model is over-fitting, without needing a separate val set. Good if we have small amount of data.
+      - oob_score (out of bag score): calculate error on training set, but only include trees in the calculation of a row's error where that row was not included in training that tree. This allows us to see whether the model is over-fitting, without needing a separate val set. Good if we have small amount of data. The score is a little less good because it doesnt use to whole forest to calculate the oob, just a subset.
 ***** sklearn ExtraTrees
-      Extreme Trees. Random select splits and features. To make more uncorrelated trees in the forest.
+      Extreme Randomized Trees. Random select splits and features. To make more uncorrelated trees in the forest.
        
 **** boosting
      [[./boosting.org]]
@@ -103,6 +105,8 @@
 ** Inspection
 *** Confusion matrix
     compares predictions with the true label. To check false positives and false negatives
+    - sklearn.metrics.confusion_matrix(true_values, predicted_values)
+    - sns.heatmap(c_matrix, annot=True)
 *** Most important features.
     - In randomforest there is a method. Crude and static in the sense that it gives little insight in understanding individual decisions on actual data.
     - In regression, features with highest weights. They can be very biased.
@@ -124,7 +128,7 @@
 *** Tree Interpreter
     To interpret how much each feature contributed to the final outcome.
     a more “operational” way to define the prediction, namely through the sequence of regions that correspond to each node/decision in the tree. Since each decision is guarded by a feature, and the decision either adds or subtracts from the value given in the parent node, the prediction can be defined as the sum of the feature contributions + the “bias” (i.e. the mean given by the topmost region that covers the entire training set).
-    f(x)=c_full + \sum_{k=1}^{K}contrib(x,k) where K is the number of features, c_{full} is the value at the root of the node and contrib(x,k) is the contribution from the k-th feature in the feature vector x. This is superficially similar to linear regression (f(x)=a+bx). For linear regression the coefficients b are fixed, with a single constant for every feature that determines the contribution. For the decision tree, the contribution of each feature is not a single predetermined value, but depends on the rest of the feature vector which determines the decision path that traverses the tree and thus the guards/contributions that are passed along the way.
+    f(x)=c_full + \sum_{k=1}^{K}contrib(x,k) where K is the number of features, c_{full} is the value at the root of the node and contrib(x,k) is the contribution from the k-th feature in the feature vector x, which would be difference between the mean value at that branch node and the mean at the parent node. This is superficially similar to linear regression (f(x)=a+bx). For linear regression the coefficients b are fixed, with a single constant for every feature that determines the contribution. For the decision tree, the contribution of each feature is not a single predetermined value, but depends on the rest of the feature vector which determines the decision path that traverses the tree and thus the guards/contributions that are passed along the way.
     - python module: treeinterpreter
     - [[http://blog.datadive.net/interpreting-random-forests/][Interpreting random forests]]
 ** Comparison
