--- a/boosting.org
+++ b/boosting.org
@@ -18,7 +18,7 @@
    Fits sequence of weak learners on diff weighted training data. Starts predicting original data set and gives equal w to each observation. If pred is incorrect using fst learner, then it gives higher weight to observation which have been predicted incorrectly. Continues to add learners iteratively until a limit is reached in the num of models or accuracy.
    Mostly uses decision stamps, but can use any machine learning algorithm as base learner if it accepts weight on trainind dataset.
    
-   [[./org_images/adaboost.png]]
+   [[./images/adaboost.png]]
 
   - AdaBoost is adaptive in the sense that subsequent weak learners are tweaked in favor of those instances misclassified by previous classifiers. 
   - AdaBoost is sensitive to noisy data and outliers. In some problems it can be less susceptible to the overfitting problem than other learning algorithms. 
